examples/tests/invalid/inflight_in_class.w
inflight class C {
  inflight field: num; // No inflight fields in classes (only in resources)
  inflight method() {} // No inflight methods in classes (only in resources)
}
